--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,8 +2,7 @@
 # tasks file for openssh
 - name: install openssh
   package:
-    name: "{{ openssh_packages[ansible_distribution]
-          | default(openssh_packages['default']) }}"
+    name: "{{ openssh_packages }}"
     state: "{{ openssh_package_state }}"
 
 - name: configure selinux to allow openssh_port
@@ -21,19 +20,16 @@
   args:
     creates: /etc/ssh/ssh_host_{{ item }}_key
   with_items:
-    - "{{ openssh_key_types[ansible_distribution ~ '-' ~ ansible_distribution_major_version]
-      | default(openssh_key_types['default']) }}"
+    - "{{ openssh_key_types }}"
 
 - name: make run directory
   file:
-    path: "{{ openssh_run_directory[ansible_distribution]
-          | default(openssh_run_directory['default']) }}"
+    path: "{{ openssh_run_directory }}"
     state: directory
 
 - name: set openssh_port
   lineinfile:
-    dest: "{{ openssh_configuration_file[ansible_distribution]
-          | default(openssh_configuration_file['default']) }}"
+    dest: "{{ openssh_configuration_file }}"
     regexp: "^Port "
     line: "Port {{ openssh_port }}"
     validate: sshd -f %s -t
@@ -46,8 +42,7 @@
 
 - name: start and enable openssh
   service:
-    name: "{{ openssh_service[ansible_distribution]
-          | default(openssh_service['default']) }}"
+    name: "{{ openssh_service }}"
     state: started
     enabled: yes
   when:
