Fix linting issue for robertdebock/ansible-lint-rules

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,8 +2,7 @@
 # handlers file for openssh
 - name: restart openssh
   service:
-    name: "{{ openssh_service[ansible_distribution]
-          | default (openssh_service['default'] ) }}"
+    name: "{{ openssh_service }}"
     state: restarted
   when:
     - ansible_virtualization_type != "docker"
