Expand test documentation, fix default molecule scenario, add ec2 scenario.

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -38,6 +38,8 @@ platforms:
     image: ubuntu:artful
   - name: openssh-ubuntu-devel
     image: ubuntu:devel
+  - name: openssh-ubuntu-latest
+    image: ubuntu:latest
 provisioner:
   name: ansible
   lint:
