Add an option to skip Docker ignored tasks.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,4 +5,4 @@
     name: "{{ openssh_service }}"
     state: restarted
   when:
-    - ansible_virtualization_type != "docker"
+    - ansible_virtualization_type != "docker" or openssh_ignore_docker
