--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,8 @@ openssh_port: 22
 
 # To update packages this role places on the system, set `openssh_package_state` to `latest`.
 openssh_package_state: present
+
+# Some Docker containers do not allow managing services, rebooting and writing
+# to some locations in /etc. The role skips tasks that will typically fail in
+# Docker. With this parameter you can tell the role to -not- skip these tasks.
+openssh_ignore_docker: yes
