--- a/molecule/fedora-rawhide/molecule.yml
+++ b/molecule/fedora-rawhide/molecule.yml
@@ -15,6 +15,9 @@ platforms:
 provisioner:
   name: ansible
   inventory:
+    host_vars:
+      openssh-fedora-rawhide:
+        ansible_python_interpreter: /usr/bin/python3
     group_vars:
       all:
         openssh_ignore_docker: no
