--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,12 +23,12 @@ openssh_syslog_facility: AUTHPRIV
 openssh_loglevel: INFO
 
 openssh_login_grace_time: 2m
-openssh_permit_root_login: yes
-openssh_scrict_modes: yes
+openssh_permit_root_login: "yes"
+openssh_scrict_modes: "yes"
 openssh_max_auth_tries: 6
 openssh_max_sessions: 10
 
-openssh_pub_key_authentication: yes
+openssh_pub_key_authentication: "yes"
 
 openssh_authorized_key_file: .ssh/authorized_keys
 
@@ -36,44 +36,44 @@ openssh_authorized_prinicpals_file: none
 openssh_authorized_keys_command: none
 openssh_authorized_keys_command_user: nobody
 
-openssh_host_based_authentication: no
-openssh_ignore_user_known_hosts: no
-openssh_ignore_rhosts: yes
+openssh_host_based_authentication: "no"
+openssh_ignore_user_known_hosts: "no"
+openssh_ignore_rhosts: "yes"
 
-openssh_permit_empty_passwords: no
-openssh_password_authentication: yes
+openssh_permit_empty_passwords: "no"
+openssh_password_authentication: "yes"
 
-openssh_challenge_response_authentication: no
+openssh_challenge_response_authentication: "no"
 
-openssh_gssapi_authentication: yes
-openssh_gssapi_cleanup_credentials: no
-openssh_gssapi_strict_acceptor_check: yes
-openssh_gssapi_key_exchange: no
-openssh_gssaip_enable_k5_users: no
+openssh_gssapi_authentication: "yes"
+openssh_gssapi_cleanup_credentials: "no"
+openssh_gssapi_strict_acceptor_check: "yes"
+openssh_gssapi_key_exchange: "no"
+openssh_gssaip_enable_k5_users: "no"
 
-openssh_use_pam: yes
+openssh_use_pam: "yes"
 
-openssh_allow_agent_forwarding: yes
-openssh_allow_tcp_forwarding: yes
-openssh_gateway_ports: no
-openssh_x11_forwarding: yes
+openssh_allow_agent_forwarding: "yes"
+openssh_allow_tcp_forwarding: "yes"
+openssh_gateway_ports: "no"
+openssh_x11_forwarding: "yes"
 openssh_x11_display_offset: 10
-openssh_x11_use_localhost: yes
-openssh_permit_tty: yes
+openssh_x11_use_localhost: "yes"
+openssh_permit_tty: "yes"
 
-openssh_print_motd: no
+openssh_print_motd: "no"
 
-openssh_print_last_log: yes
-openssh_tcp_keep_alive: yes
-openssh_permit_user_environment: no
+openssh_print_last_log: "yes"
+openssh_tcp_keep_alive: "yes"
+openssh_permit_user_environment: "no"
 openssh_compression: delayed
 openssh_client_alive_interval: 30
 openssh_client_alive_count_max: 3
-openssh_show_patch_level: no
-openssh_use_dns: no
+openssh_show_patch_level: "no"
+openssh_use_dns: "no"
 openssh_pid_file: /var/run/sshd.pid
 openssh_max_startups: 10:30:100
-openssh_permit_tunnel: no
+openssh_permit_tunnel: "no"
 openssh_chroot_directory: none
 openssh_version_addendum: none
 
