--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,8 +33,8 @@
 - name: configure openssh
   template:
     dest: "{{ openssh_configuration_file }}"
-    src: sshd_config.j2
-    mode: "0600"
+    src: "{{ openssh_template_src }}
+    mode: "{{ openssh_template_mode }}"
     owner: root
     group: root
     validate: sshd -f %s -t
