--- a/vars/main.yml
+++ b/vars/main.yml
@@ -33,3 +33,17 @@ openssh_run_directory: "{{ _openssh_run_directory[ansible_distribution] | defaul
 openssh_configuration_file: /etc/ssh/sshd_config
 
 openssh_service: sshd
+
+openssh_template_src: sshd_config_{{ ansible_distribution ~ '-' ~ ansible_distribution_major_version | default(ansible_distribution) }}.j2
+
+_openssh_template_mode:
+  Alpine: "0644"
+  Archlinux: "0644"
+  CentOS: "0600"
+  Debian: "0644"
+  Fedora: "0600"
+  openSUSE Leap: "0640"
+  openSUSE Tumbleweed: "0640"
+  Ubuntu: "0644"
+
+openssh_template_mode: "{{ _openssh_template_mode[ansible_distribution] }}"
