--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,11 +33,14 @@
 - name: configure openssh
   template:
     dest: "{{ openssh_configuration_file }}"
-    src: "{{ openssh_template_src }}"
+    src: "{{ item }}"
     mode: "{{ openssh_template_mode }}"
     owner: root
     group: root
     validate: sshd -f %s -t
+  with_first_found:
+    - ssh_config_{{ ansible_distribution }}.j2
+    - ssh_config_{{ ansible_distribution ~ '-' ~ ansible_distribution_major_version }}.j2
   notify:
     - restart openssh
 
