--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,8 +39,8 @@
     group: root
     validate: sshd -f %s -t
   with_first_found:
-    - ssh_config_{{ ansible_distribution }}.j2
-    - ssh_config_{{ ansible_distribution ~ '-' ~ ansible_distribution_major_version }}.j2
+    - templates/ssh_config_{{ ansible_distribution ~ '-' ~ ansible_distribution_major_version }}.j2
+    - templates/ssh_config_{{ ansible_distribution }}.j2
   notify:
     - restart openssh
 
