--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,17 +33,11 @@
 - name: configure openssh
   template:
     dest: "{{ openssh_configuration_file }}"
-    src: "{{ item }}"
+    src: "{{ openssh_template_src }}"
     mode: "{{ openssh_template_mode }}"
     owner: root
     group: root
     validate: sshd -f %s -t
-  with_first_found:
-    files:
-      - "ssh_config_{{ ansible_distribution ~ '-' ~ ansible_distribution_major_version }}.j2"
-      - "ssh_config_{{ ansible_distribution }}.j2"
-    paths:
-      - ../templates
   notify:
     - restart openssh
 
