--- a/molecule/vagrant/molecule.yml
+++ b/molecule/vagrant/molecule.yml
@@ -13,7 +13,7 @@ platforms:
   - name: openssh-debian
     box: debian/stretch64
   - name: openssh-fedora
-    box: fedora/29-cloud-base
+    box: fedora/30-cloud-base
 provisioner:
   name: ansible
   playbooks:
@@ -21,5 +21,9 @@ provisioner:
     converge: ../resources/playbook.yml
   lint:
     name: ansible-lint
+  inventory:
+    host_vars:
+      openssh-fedora:
+        ansible_python_interpreter: /usr/bin/python3
 scenario:
   name: vagrant
