--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,61 +8,15 @@ lint:
 driver:
   name: docker
 platforms:
-  - name: openssh-alpine-edge
-    image: alpine:edge
-    pre_build_image: yes
-    command: sh -c "while true ; do sleep 1 ; done"
-  - name: openssh-alpine-latest
-    image: alpine:latest
-    pre_build_image: yes
-    command: sh -c "while true ; do sleep 1 ; done"
-  - name: openssh-archlinux
-    image: archlinux/base
-    pre_build_image: yes
-  - name: openssh-centos-6
-    image: centos:6
-    pre_build_image: yes
-  - name: openssh-centos-latest
-    image: centos:latest
-    pre_build_image: yes
-  - name: openssh-debian-stable
-    image: debian:stable
-    pre_build_image: yes
-  - name: openssh-debian-unstable
-    image: debian:unstable
-    pre_build_image: yes
-  - name: openssh-fedora-latest
-    image: fedora:latest
-    pre_build_image: yes
-  - name: openssh-fedora-rawhide
-    image: fedora:rawhide
-    pre_build_image: yes
-  - name: openssh-opensuse-leap
-    image: opensuse/leap
-    pre_build_image: yes
-  - name: openssh-ubuntu-latest
-    image: ubuntu:latest
-    pre_build_image: yes
-  - name: openssh-ubuntu-rolling
-    image: ubuntu:rolling
-    pre_build_image: yes
-  - name: openssh-ubuntu-devel
-    image: ubuntu:devel
+  - name: "${image:-default}-${TOX_ENVNAME:-default}"
+    image: "${namespace}${image:-docker-fedora-systemd}:${tag:-latest}"
+    command: sh -c "while true ; do sleep 30 ; done"
     pre_build_image: yes
 provisioner:
   name: ansible
-  playbooks:
-    prepare: ../resources/prepare.yml
-    converge: ../resources/playbook.yml
-  inventory:
-    host_vars:
-      openssh-fedora-latest:
-        ansible_python_interpreter: /usr/bin/python3
-      openssh-fedora-rawhide:
-        ansible_python_interpreter: /usr/bin/python3
-  config_options:
-    defaults:
-      stdout_callback: yaml
-      bin_ansible_callbacks: true
+verifier:
+  name: ansible
+  lint:
+    name: ansible-lint
 scenario:
   name: default
