--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,7 +24,7 @@ openssh_loglevel: INFO
 
 openssh_login_grace_time: 2m
 openssh_permit_root_login: "yes"
-openssh_scrict_modes: "yes"
+openssh_strict_modes: "yes"
 openssh_max_auth_tries: 6
 openssh_max_sessions: 10
 
