--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 # tasks file for openssh
+- name: include assert.yml
+  include_tasks: assert.yml
+
 - name: install openssh
   package:
     name: "{{ openssh_packages }}"
