--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -3,6 +3,7 @@
   assert:
     that:
       - openssh_port is defined
+      - openssh_port | length > 0
       - openssh_port | int
       - openssh_port | int > 0
       - openssh_port | int < 65536
@@ -11,6 +12,7 @@
   assert:
     that:
       - openssh_address_family is defined
+      - openssh_address_family | length > 0
       - openssh_address_family in ["any", "inet", "inet6"]
 
 - name: test if openssh_listen_address is set correctly
@@ -29,40 +31,47 @@
   assert:
     that:
       - openssh_rekey_limit is defined
+      - openssh_rekey_limit | length > 0
 
 - name: test if openssh_syslog_facility is set correctly
   assert:
     that:
       - openssh_syslog_facility is defined
+      - openssh_syslog_facility | length > 0
       - openssh_syslog_facility in ["DAEMON", "USER", "AUTH", "LOCAL0", "LOCAL1", "LOCAL2", "LOCAL3", "LOCAL4", "LOCAL5", "LOCAL6", "LOCAL7"]
 
 - name: test if openssh_loglevel is set correctly
   assert:
     that:
       - openssh_loglevel is defined
+      - openssh_loglevel | length > 0
       - openssh_loglevel in ["QUIET", "FATAL", "ERROR", "INFO", "VERBOSE", "DEBUG", "DEBUG1", "DEBUG2", "DEBUG3"]
 
 - name: test if openssh_login_grace_time is set correctly
   assert:
     that:
       - openssh_login_grace_time is defined
+      - openssh_login_grace_time | length > 0
 
 - name: test if openssh_permit_root_login is set correctly
   assert:
     that:
       - openssh_permit_root_login is defined
+      - openssh_permit_root_login | length > 0
       - openssh_permit_root_login in ["yes", "no"]
 
 - name: test if openssh_strict_modes is set correctly
   assert:
     that:
       - openssh_strict_modes is defined
+      - openssh_strict_modes | length > 0
       - openssh_strict_modes in ["yes", "no"]
 
 - name: test if openssh_max_auth_tries is set correctly
   assert:
     that:
       - openssh_max_auth_tries is defined
+      - openssh_max_auth_tries | length > 0
       - openssh_max_auth_tries | int
       - openssh_max_auth_tries | int > 0
 
@@ -70,6 +79,7 @@
   assert:
     that:
       - openssh_max_sessions is defined
+      - openssh_max_sessions | length > 0
       - openssh_max_sessions | int
       - openssh_max_sessions | int > 0
 
@@ -77,128 +87,150 @@
   assert:
     that:
       - openssh_pub_key_authentication is defined
+      - openssh_pub_key_authentication | length > 0
       - openssh_pub_key_authentication in ["yes", "no"]
 
 - name: test if openssh_authorized_key_file is set correctly
   assert:
     that:
       - openssh_authorized_key_file is defined
+      - openssh_authorized_key_file | length > 0
 
 - name: test if openssh_authorized_prinicpals_file is set correctly
   assert:
     that:
       - openssh_authorized_prinicpals_file is defined
+      - openssh_authorized_prinicpals_file | length > 0
 
 - name: test if openssh_authorized_keys_command is set correctly
   assert:
     that:
       - openssh_authorized_keys_command is defined
+      - openssh_authorized_keys_command | length > 0
 
 - name: test if openssh_authorized_keys_command_user is set correctly
   assert:
     that:
       - openssh_authorized_keys_command_user is defined
+      - openssh_authorized_keys_command_user | length > 0
 
 - name: test if openssh_host_based_authentication is set correctly
   assert:
     that:
       - openssh_host_based_authentication is defined
+      - openssh_host_based_authentication | length > 0
       - openssh_host_based_authentication in ["yes", "no"]
 
 - name: test if openssh_ignore_user_known_hosts is set correctly
   assert:
     that:
       - openssh_ignore_user_known_hosts is defined
+      - openssh_ignore_user_known_hosts | length > 0
       - openssh_ignore_user_known_hosts in ["yes", "no"]
 
 - name: test if openssh_ignore_rhosts is set correctly
   assert:
     that:
       - openssh_ignore_rhosts is defined
+      - openssh_ignore_rhosts | length > 0
       - openssh_ignore_rhosts in ["yes", "no"]
 
 - name: test if openssh_permit_empty_passwords is set correctly
   assert:
     that:
       - openssh_permit_empty_passwords is defined
+      - openssh_permit_empty_passwords | length > 0
       - openssh_permit_empty_passwords in ["yes", "no"]
 
 - name: test if openssh_password_authentication is set correctly
   assert:
     that:
       - openssh_password_authentication is defined
+      - openssh_password_authentication | length > 0
       - openssh_password_authentication in ["yes", "no"]
 
 - name: test if openssh_challenge_response_authentication is set correctly
   assert:
     that:
       - openssh_challenge_response_authentication is defined
+      - openssh_challenge_response_authentication | length > 0
       - openssh_challenge_response_authentication in ["yes", "no"]
 
 - name: test if openssh_gssapi_authentication is set correctly
   assert:
     that:
       - openssh_gssapi_authentication is defined
+      - openssh_gssapi_authentication | length > 0
       - openssh_gssapi_authentication in ["yes", "no"]
 
 - name: test if openssh_gssapi_cleanup_credentials is set correctly
   assert:
     that:
       - openssh_gssapi_cleanup_credentials is defined
+      - openssh_gssapi_cleanup_credentials | length > 0
       - openssh_gssapi_cleanup_credentials in ["yes", "no"]
 
 - name: test if openssh_gssapi_strict_acceptor_check is set correctly
   assert:
     that:
       - openssh_gssapi_strict_acceptor_check is defined
+      - openssh_gssapi_strict_acceptor_check | length > 0
       - openssh_gssapi_strict_acceptor_check in ["yes", "no"]
 
 - name: test if openssh_gssapi_key_exchange is set correctly
   assert:
     that:
       - openssh_gssapi_key_exchange is defined
+      - openssh_gssapi_key_exchange | length > 0
       - openssh_gssapi_key_exchange in ["yes", "no"]
 
 - name: test if openssh_gssaip_enable_k5_users is set correctly
   assert:
     that:
       - openssh_gssaip_enable_k5_users is defined
+      - openssh_gssaip_enable_k5_users | length > 0
       - openssh_gssaip_enable_k5_users in ["yes", "no"]
 
 - name: test if openssh_use_pam is set correctly
   assert:
     that:
       - openssh_use_pam is defined
+      - openssh_use_pam | length > 0
       - openssh_use_pam in ["yes", "no"]
 
 - name: test if openssh_allow_agent_forwarding is set correctly
   assert:
     that:
       - openssh_allow_agent_forwarding is defined
+      - openssh_allow_agent_forwarding | length > 0
       - openssh_allow_agent_forwarding in ["yes", "no"]
 
 - name: test if openssh_allow_tcp_forwarding is set correctly
   assert:
     that:
       - openssh_allow_tcp_forwarding is defined
+      - openssh_allow_tcp_forwarding | length > 0
       - openssh_allow_tcp_forwarding in ["yes", "no"]
 
 - name: test if openssh_gateway_ports is set correctly
   assert:
     that:
       - openssh_gateway_ports is defined
+      - openssh_gateway_ports | length > 0
       - openssh_gateway_ports in ["yes", "no"]
 
 - name: test if openssh_x11_forwarding is set correctly
   assert:
     that:
       - openssh_x11_forwarding is defined
+      - openssh_x11_forwarding | length > 0
       - openssh_x11_forwarding in ["yes", "no"]
 
 - name: test if openssh_x11_display_offset is set correctly
   assert:
     that:
       - openssh_x11_display_offset is defined
+      - openssh_x11_display_offset | length > 0
       - openssh_x11_display_offset | int
       - openssh_x11_display_offset | int > 1
 
@@ -206,48 +238,56 @@
   assert:
     that:
       - openssh_x11_use_localhost is defined
+      - openssh_x11_use_localhost | length > 0
       - openssh_x11_use_localhost in ["yes", "no"]
 
 - name: test if openssh_permit_tty is set correctly
   assert:
     that:
       - openssh_permit_tty is defined
+      - openssh_permit_tty | length > 0
       - openssh_permit_tty in ["yes", "no"]
 
 - name: test if openssh_print_motd is set correctly
   assert:
     that:
       - openssh_print_motd is defined
+      - openssh_print_motd | length > 0
       - openssh_print_motd in ["yes", "no"]
 
 - name: test if openssh_print_last_log is set correctly
   assert:
     that:
       - openssh_print_last_log is defined
+      - openssh_print_last_log | length > 0
       - openssh_print_last_log in ["yes", "no"]
 
 - name: test if openssh_tcp_keep_alive is set correctly
   assert:
     that:
       - openssh_tcp_keep_alive is defined
+      - openssh_tcp_keep_alive | length > 0
       - openssh_tcp_keep_alive in ["yes", "no"]
 
 - name: test if openssh_permit_user_environment is set correctly
   assert:
     that:
       - openssh_permit_user_environment is defined
+      - openssh_permit_user_environment | length > 0
       - openssh_permit_user_environment in ["yes", "no"]
 
 - name: test if openssh_compression is set correctly
   assert:
     that:
       - openssh_compression is defined
+      - openssh_compression | length > 0
       - openssh_compression in ["yes", "no", "delayed"]
 
 - name: test if openssh_client_alive_interval is set correctly
   assert:
     that:
       - openssh_client_alive_interval is defined
+      - openssh_client_alive_interval | length > 0
       - openssh_client_alive_interval | int
       - openssh_client_alive_interval | int >= 0
 
@@ -255,6 +295,7 @@
   assert:
     that:
       - openssh_client_alive_count_max is defined
+      - openssh_client_alive_count_max | length > 0
       - openssh_client_alive_count_max | int
       - openssh_client_alive_count_max | int >= 0
 
@@ -262,44 +303,52 @@
   assert:
     that:
       - openssh_show_patch_level is defined
+      - openssh_show_patch_level | length > 0
       - openssh_show_patch_level in ["yes", "no"]
 
 - name: test if openssh_use_dns is set correctly
   assert:
     that:
       - openssh_use_dns is defined
+      - openssh_use_dns | length > 0
       - openssh_use_dns in ["yes", "no"]
 
 - name: test if openssh_pid_file is set correctly
   assert:
     that:
       - openssh_pid_file is defined
+      - openssh_pid_file | length > 0
 
 - name: test if openssh_max_startups is set correctly
   assert:
     that:
       - openssh_max_startups is defined
+      - openssh_max_startups | length > 0
 
 - name: test if openssh_permit_tunnel is set correctly
   assert:
     that:
       - openssh_permit_tunnel is defined
+      - openssh_permit_tunnel | length > 0
       - openssh_permit_tunnel in ["yes", "no"]
 
 - name: test if openssh_chroot_directory is set correctly
   assert:
     that:
       - openssh_chroot_directory is defined
+      - openssh_chroot_directory | length > 0
 
 - name: test if openssh_version_addendum is set correctly
   assert:
     that:
       - openssh_version_addendum is defined
+      - openssh_version_addendum | length > 0
 
 - name: test if openssh_banner is set correctly
   assert:
     that:
       - openssh_banner is defined
+      - openssh_banner | length > 0
 
 - name: test if openssh_accept_env is set correctly
   assert:
@@ -311,3 +360,4 @@
   assert:
     that:
       - openssh_subsystem is defined
+      - openssh_subsystem | length > 0
